Add footer with copyright information
Added footer with copyright notice.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -107,7 +107,7 @@
   </main>
 
   <footer>
-    <p></p>
+    <p>&copy; 2025 Todos os direitos reservados — Projeto escolar desenvolvido por José Hadriel</p>
   </footer>
 </body>
 </html>
